<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_view"
        android:title="@string/menu_view"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_view"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_export_to_excel"
        android:title="@string/menu_export_to_excel"
        android:orderInCategory="2"
        android:icon="@drawable/ic_menu_send"
        android:showAsAction="ifRoom" />  
        
    <item android:id="@+id/menu_fb_share"
        android:title="@string/menu_fb_share"
        android:orderInCategory="3"
        android:icon="@drawable/ic_menu_share"
        android:showAsAction="ifRoom" />  
        
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:orderInCategory="4"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="ifRoom" />  
    
</menu>