<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle" >

    <!-- 320dp across, 533dp down -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout 
            android:id = "@+id/scrollViewll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true" >
            
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonBack"
            android:layout_height="match_parent"
			style="@style/ScoreSheetButtons"
            android:onClick="backSpace"
            android:textSize="@dimen/text_size_small_sp"
            android:text="@string/bck" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_height="match_parent"
            style="@style/ScoreSheetButtons"
            android:onClick="clearAll"
            android:textSize="@dimen/text_size_small_sp"
            android:text="@string/clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSave"
            android:layout_height="match_parent"
            style="@style/ScoreSheetButtons"
            android:onClick="save"
            android:textSize="@dimen/text_size_small_sp"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_height="match_parent"
            style="@style/ScoreSheetButtons"
            android:onClick="next"
            android:textSize="@dimen/text_size_small_sp"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>