<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="2dp" >

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distanceTitle"
                android:textSize="@dimen/text_size_large_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editTextDistanceMetres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberDecimal" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/editTextDistanceYards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberDecimal" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioGroupDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right" >

                    <RadioButton
                        android:id="@+id/radioButtonDistanceMetres"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/metricMetres"
                        android:textSize="@dimen/text_size_small_sp" />

                    <RadioButton
                        android:id="@+id/radioButtonDistanceYards"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/imperialYards"
                        android:textSize="@dimen/text_size_small_sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="2dp" >

            <TextView
                android:id="@+id/textViewElevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elevation"
                android:textSize="@dimen/text_size_large_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editTextElevationMetres"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberSigned|numberDecimal" />

                    <EditText
                        android:id="@+id/editTextElevationYards"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberSigned|numberDecimal" />

                    <EditText
                        android:id="@+id/editTextElevationDegrees"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberSigned|numberDecimal" />

                    <EditText
                        android:id="@+id/editTextElevationRadians"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:imeOptions="actionGo"
                        android:inputType="number|numberSigned|numberDecimal" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radioGroupElevation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right" >

                    <RadioButton
                        android:id="@+id/radioButtonElevationMetres"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/metricMetres"
                        android:textSize="@dimen/text_size_small_sp" />

                    <RadioButton
                        android:id="@+id/radioButtonElevationYards"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/imperialYards"
                        android:textSize="@dimen/text_size_small_sp" />

                    <RadioButton
                        android:id="@+id/radioButtonElevationDegrees"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/degrees"
                        android:textSize="@dimen/text_size_small_sp" />

                    <RadioButton
                        android:id="@+id/radioButtonELevationRadians"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/radians"
                        android:textSize="@dimen/text_size_small_sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/space"
        android:textSize="@dimen/text_size_extra_small_sp" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="calculate"
        android:text="@string/go" />

</LinearLayout>